syntax = "proto3";

package configurator;

option go_package = "github.com/ligato/vpp-agent/api/configurator;configurator";

import "models/vpp/vpp.proto";

message Stats {
    oneof stats {
        vpp.Stats vpp_stats = 1;
    }
}

// StatsPoller provides operations for retrieving statistics.
service StatsPoller {
    // PollStats is used for polling metrics using poll period.
    rpc PollStats(PollStatsRequest) returns (stream PollStatsResponse) {};
}

message PollStatsRequest {
    // PeriodSec defines polling period (in seconds)
    uint32 period_sec = 1;
}


message PollStatsResponse {
    uint32 poll_seq = 1;
    Stats stats = 2;
}
